# DepthForge

./: AppIcon.rc  Brush.cpp  Brush.h  CMakeLists.txt  DepthForgeWin.cpp  DepthForgeWin.h  FpsMonitor.cpp  FpsMonitor.h  Lens.cpp  Lens.h  Lense.cpp  Lense.h  MainWnd.cpp  MainWnd.h  README.md  Ubuntu.build.readme.txt  Windows.build.suggestions.txt  genbuttons.cpp  genbuttons.h  main.cpp  version.h
Image/: Artif3d.cpp  DrawImage.cpp  Geometry.cpp  Geometry.h  Image.cpp  Image.h  PathAdapter.cpp  PathAdapter.h  TrigCache.cpp  TrigCache.h
PixelGfx/: GfxBlt.cpp  GfxThreadWorker.cpp  GfxThreadWorker.h  JWC_PixelGfx.cpp  JWC_PixelGfx.h
Threading/: Sync.cpp  Sync.h
UI/: Button.cpp  Cursor.cpp  Cursor.h  Forge.cpp  Forge.h  ForgeContainer.cpp  ForgeContainer.h  MainUI.cpp  MainUI.h  Mode.cpp  Mode.h  Mode_DepthEdit.cpp  Mode_DepthEdit.h  Mode_Draw.cpp  Mode_Draw.h  Mode_Path.cpp  Mode_Path.h  Slider.cpp  Slider.h  TabCtl.cpp  TabCtl.h  TestUI.cpp  TestUI.h  UI.cpp  UI.h  common.cpp  common.h  testUI.cpp  testUI.h
